# spotify-remote

./: .dockerignore  .gitignore  .golangci.yaml  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  depot.json  go.mod  go.sum
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  forwarder-windows.yaml  release.yaml
common/: Cargo.toml
common/src/: util.rs
forwarder/: Cargo.toml
forwarder/src/: forwarder.rs  lib.rs  main.rs  server.rs
player/: Cargo.toml
player/src/: main.rs
protocol/: Cargo.toml  spotify-remote.proto
protocol/src/: lib.rs
receiver/: .golangci.yaml  Cargo.toml  Makefile  build.rs
receiver.bak.go/src/cmd/receiver/: main.go
receiver.bak.go/src/cmd/receiver/server/: server.go
receiver/pb/: spotify-remote.proto
receiver/src/: bot.rs  creds_registry.rs  lib.rs  main.rs  player_events_manager.rs  server.rs  stream_registry.rs  util.rs
receiver/src/logging/: logging.go
receiver/src/pb/: spotify-remote.proto
src/cmd/receiver/: main.go
src/cmd/receiver/server/: server.go
src/cmd/transmitter/: main.go
src/pb/: spotify-remote.pb.go  spotify-remote.proto  spotify-remote_grpc.pb.go
src/utils/: utils.go
transmitter/: Cargo.toml  build.rs
transmitter/src/: buf_sink.rs  lib.rs  main.rs  transmitter.rs  transmitter.rs.bak  util.rs
