[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.0", features = ["derive"] }
futures-util = "0.3.28"
hex = "0.4.3"
librespot = { version = "0.4.2", default_features = false }
reqwest = { version = "0.11.16", default_features = false, features = [
    "rustls-tls",
    "json",
] }
serde_json = "1.0.96"
sha1 = "0.10.5"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
rand = "0.8.5"

protocol = { path = "../protocol" }
common = { path = "../common" }
