[package]
name = "player"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.2.2", features = ["derive", "env"] }
hex = "0.4.3"
librespot = { version = "0.4.2", default-features = false }
sha1 = "0.10.5"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
serde_json = "1.0.96"
common = { path = "../common" }
