[package]
name = "player"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
hex = "0.4.3"
librespot = { version = "0.4.2", default-features = false }
sha1 = "0.10.5"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
serde_json = "1.0.99"
common = { path = "../common" }
