[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { version = "0.3" }
anyhow = { version = "1.0.70", features = ["backtrace"] }
atty = "0.2.14"
clap = { version = "4.2.2", features = ["derive", "env"] }
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
librespot = { version = "0.4.2", default-features = false }
sha1 = "0.10.5"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
url = "2.3.1"
zerocopy = "0.6.1"
serenity = { version = "0.11", features = ["voice"] }
futures-core = "0.3.28"
tokio-stream = "0.1.12"
serde_json = "1.0.96"
axum = "0.6.15"
console-subscriber = "0.1.8"

protocol = { path = "../protocol" }
common = { path = "../common" }
