[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
songbird = { version = "0.3" }
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.2.2", features = ["derive", "env"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
serde_json = "1.0.96"
axum = { version = "0.6.15", features = ["macros"] }
protocol = { path = "../protocol" }
common = { path = "../common" }
poise = "0.5.3"
serde = { version = "1.0.160", features = ["derive"] }
tokio-util = "0.7.8"
rand = "0.8.5"
base64 = "0.21.0"
