[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
songbird = { version = "0.3" }
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.4.0", features = ["derive", "env"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
serde_json = "1.0.96"
axum = "0.6.18"
protocol = { path = "../protocol" }
common = { path = "../common" }
poise = "0.5.5"
