[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
atty = "0.2.14"
clap = { version = "4.2.2", features = ["derive"] }
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
librespot = { version = "0.4.2", default_features = false }
prost = "0.11.9"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
sha1 = "0.10.5"
tokio = { version = "1.27.0", features = ["full"] }
tonic = { version = "0.9.1", features = ["tls-roots"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "json",
    "time",
] }
url = "2.3.1"
zerocopy = "0.6.1"
protocol = { path = "../protocol" }


[build-dependencies]
tonic-build = "0.9.1"
